# ansible

./: README.md  ansible.cfg  covenant.yml  derelict.yml  hosts  pyproject.toml  sephora.yml  site.yml
group_vars/all/: secret.yml  vars.yml
group_vars/headless/: vars.yml
group_vars/kde/: vars.yml
roles/actions-runner-docker-images/tasks/: main.yml
roles/debug/tasks/: main.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: main.yml
roles/mac/defaults/: main.yml
roles/mac/tasks/: brew.yml  main.yml  packages.yml
roles/proxy/defaults/: main.yml
roles/proxy/tasks/: main.yml
roles/proxy/templates/: squid.conf.j2
roles/system/defaults/: main.yml
roles/system/files/: .zshrc
roles/system/handlers/: main.yml
roles/system/tasks/: essential.yml  main.yml  ssh.yml  user.yml
