[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["Christian Lengert <christian.lengert@tuta.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.6.0"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
